adjust layout breakpoints to fix incorrect overflow

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -31,7 +31,7 @@
   }
 }
 @mixin for-xl {
-  @media (min-width: 1100px) {
+  @media (min-width: 1250px) {
     @content;
   }
 }
